--- a/JWTools.Security.Cryptography/JWTools.Security.Cryptography/JWTools.Security.Cryptography.csproj
+++ b/JWTools.Security.Cryptography/JWTools.Security.Cryptography/JWTools.Security.Cryptography.csproj
@@ -10,6 +10,7 @@
     <PackageTags>Cryptography</PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
 </Project>
